# Embodied-Robot

./: .gitignore  pyproject.toml
dino-navigation/: one_shot.py  train.py  transform.py  video_inference.py
