[project]
name = "embodied-robot"
version = "0.1.0"
description = "Embodied-AI perception and policy pipelines from frozen vision models to world-action models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=5.0.0",
    "matplotlib>=3.11.0",
    "mlflow>=3.13.0",
    "opencv-python>=4.13.0.92",
    "torch>=2.12.0",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.27.0",
    "transformers>=5.12.1",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[dependency-groups]
dev = [
    "psutil>=7.2.2",
]
